--- a/tracking_details.html
+++ b/tracking_details.html
@@ -14,9 +14,6 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
-    <script src="js/index.js"></script>
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -167,8 +164,8 @@
 
                             get_driver_details_from_fleetos(mobileNumber, token)
                         } else {
-                            if (response['message'] != null && response['message'] != "") {
-                                alert(response['message'])
+                            if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
+                                alert(response['responseJSON']['message'])
                             } else {
                                 alert(ERROR_GENERATING_AUTH_TOKEN)
                             }
@@ -178,8 +175,8 @@
                 error: function (response) {
                     hideLoader()
 
-                    if (response['message'] != null && response['message'] != "") {
-                        alert(response['message'])
+                    if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
+                        alert(response['responseJSON']['message'])
                     } else {
                         alert(ERROR_GENERATING_AUTH_TOKEN)
                     }
@@ -205,13 +202,14 @@
                             if (response['code'] == API_SUCCESS_CODE) {
                                 if (response['data']['simConsent'] == 'N') {
                                     alert(response['data']['simConsentMsg'])
+                                    getTrackingDetails(mobileNumber, twoDaysBeforeCurrentDateTimeInEpoch, currentDateTimeInEpoch, token)
                                 }
                                 else {
-                                    getTrackingDetails(mobileNumber, currentDateTimeInEpoch, twoDaysBeforeCurrentDateTimeInEpoch, token)
+                                    getTrackingDetails(mobileNumber, twoDaysBeforeCurrentDateTimeInEpoch, currentDateTimeInEpoch, token)
                                 }
                             } else {
-                                if (response['message'] != null && response['message'] != "") {
-                                    alert(response['message'])
+                                if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
+                                    alert(response['responseJSON']['message'])
                                 } else {
                                     alert(ERROR_GETTING_DRIVER_ID)
                                 }
@@ -221,8 +219,8 @@
                     error: function (response) {
                         hideLoader()
 
-                        if (response['message'] != null && response['message'] != "") {
-                            alert(response['message'])
+                        if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
+                            alert(response['responseJSON']['message'])
                         } else {
                             alert(ERROR_GETTING_DRIVER_ID)
                         }
@@ -275,8 +273,8 @@
 
                             getTrackingDetails(mobileNumber, startDateTimeInEpoch, endDateTimeInEpoch, token)
                         } else {
-                            if (response['message'] != null && response['message'] != "") {
-                                alert(response['message'])
+                            if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
+                                alert(response['responseJSON']['message'])
                             } else {
                                 alert(ERROR_GENERATING_AUTH_TOKEN)
                             }
@@ -286,8 +284,8 @@
                 error: function (response) {
                     hideLoader()
 
-                    if (response['message'] != null && response['message'] != "") {
-                        alert(response['message'])
+                    if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
+                        alert(response['responseJSON']['message'])
                     } else {
                         alert(ERROR_GENERATING_AUTH_TOKEN)
                     }
@@ -296,7 +294,10 @@
         }
 
         function convertDateTimeStringToEpoch(dateTime) {
-            return moment(dateTime, "dd-mm-yyyy hh:ii").valueOf()
+            // This complicated piece of regex is required because JavaScript dates are internally stored as milliseconds since epoch.
+            //  You just need to convert it to a number, e.g. with the unary + operator, to get them
+            var parts = dateTime.match(/(\d{2})-(\d{2})-(\d{4}) (\d{2}):(\d{2})/);
+            return Date.UTC(+parts[3], parts[2] - 1, +parts[1], +parts[4], +parts[5]);
         }
 
         function getTrackingDetails(mobileNumber, startDateTime, stopDateTime, token) {
@@ -314,7 +315,6 @@
                 },
                 success: function (response) {
                     hideLoader()
-
                     if (response['data'].length > 0) {
                         ajax_response = JSON.stringify(response.data);
                         var gps_data = JSON.parse(ajax_response);
@@ -324,7 +324,6 @@
                     }
                 },
                 error: function (response) {
-                    console.log(response['responseJSON']['message'])
                     hideLoader()
                     if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
                         alert(response['responseJSON']['message'])
@@ -336,119 +335,137 @@
         }
 
         function view_map_view(gps_data) {
+            let markers = [];
+            let flightPlanCoordinates = [];
+
+
             Lat = 18.5204;
             Lon = 73.8567;
 
-            var a = [];
+            var pinged_locations = [];
             $.each(gps_data, function (index, data) {
-                a.push({ "lat": data.latitude, "lng": data.longitude, "address": data.address + ", Date - " + data.date_time, "location_number": (index + 1).toString() });
+                pinged_locations.push({ "lat": data.latitude, "lng": data.longitude, "address": data.address });
+                flightPlanCoordinates.push(new google.maps.LatLng(parseFloat(data.latitude), parseFloat(data.longitude)))
             });
 
+
             // If location details present then set default lat long as a first location
-            if (a.length >= 1) {
-                Lat = a[0].lat;
-                Lon = a[0].lng;
+            if (pinged_locations.length >= 1) {
+                Lat = pinged_locations[0].lat;
+                Lon = pinged_locations[0].lng;
             }
 
             $('#mapid').remove(); // this is <canvas> element
             $('#map-div').append('<div id="mapid"></div>');
 
             // Create map view
-            var mymap = L.map('mapid').setView([Lat, Lon], 11);
-
-            L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-                maxZoom: 18,
-                attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-            }).addTo(mymap);
-
-            $('#templateModal_map_View').on('shown.bs.modal', function () {
-                mymap.invalidateSize();
+            map = new google.maps.Map(document.getElementById("mapid"), {
+                center: { lat: 23.5154183, lng: 80.3135954 },
+                zoom: 4,
+                mapTypeId: "roadmap",
+                mapTypeControl: false,
+                streetViewControl: false,
+                fullscreenControl: false
             });
 
-            // Create marker with different colour
-            var greenIcon = new L.Icon({
-                iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png',
-                iconSize: [40, 65]
-            });
-
-            var redIcon = new L.Icon({
-                iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png',
-                iconSize: [40, 65]
-            });
-
-            var blueIcon = new L.Icon({
-                iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-blue.png',
-                iconSize: [30, 55]
-            });
-
-
-            for (i = 0; i < a.length; i++) {
+            for (i = 0; i < pinged_locations.length; i++) {
+                const myLatLng = { lat: parseFloat(pinged_locations[i]['lat']), lng: parseFloat((pinged_locations[i]['lng'])) };
                 // If first location, then set colour as green
                 if (i == 0) {
+                    const svgMarker = {
+                        path: "M10.453 14.016l6.563-6.609-1.406-1.406-5.156 5.203-2.063-2.109-1.406 1.406zM12 2.016q2.906 0 4.945 2.039t2.039 4.945q0 1.453-0.727 3.328t-1.758 3.516-2.039 3.070-1.711 2.273l-0.75 0.797q-0.281-0.328-0.75-0.867t-1.688-2.156-2.133-3.141-1.664-3.445-0.75-3.375q0-2.906 2.039-4.945t4.945-2.039z",
+                        fillColor: "green",
+                        fillOpacity: 1,
+                        strokeWeight: 0,
+                        rotation: 0,
+                        scale: 2,
+                        anchor: new google.maps.Point(15, 30),
+                    };
                     // Add address as title and bindtooltp for showing location sequentially
-                    var marker = L.marker([a[i].lat, a[i].lng],
-                        {
-                            title: a[i].address,
-                            icon: greenIcon
-                        },
+                    var marker = new google.maps.Marker({
+                        map,
+                        icon: svgMarker,
+                        title: pinged_locations[i]['address'],
+                        position: myLatLng,
+                        address: pinged_locations[i]['address'],
+                        // rating: place.rating
+                    });
 
-                    ).bindTooltip(a[i].location_number,
-                        {
-                            permanent: true,
-                            direction: 'right'
-                        })
-                        .addTo(mymap);
+                    markers.push(
+                        marker
+                    );
                 }
                 // If last location, then set colour as red
-                else if (i == a.length - 1) {
+                else if (i == pinged_locations.length - 1) {
+                    const svgMarker = {
+                        path: "M10.453 14.016l6.563-6.609-1.406-1.406-5.156 5.203-2.063-2.109-1.406 1.406zM12 2.016q2.906 0 4.945 2.039t2.039 4.945q0 1.453-0.727 3.328t-1.758 3.516-2.039 3.070-1.711 2.273l-0.75 0.797q-0.281-0.328-0.75-0.867t-1.688-2.156-2.133-3.141-1.664-3.445-0.75-3.375q0-2.906 2.039-4.945t4.945-2.039z",
+                        fillColor: "red",
+                        fillOpacity: 1,
+                        strokeWeight: 0,
+                        rotation: 0,
+                        scale: 2,
+                        anchor: new google.maps.Point(15, 30),
+                    };
                     // Add address as title and bindtooltp for showing location sequentially
-                    var marker = L.marker([a[i].lat, a[i].lng],
-                        {
-                            title: a[i].address,
-                            icon: redIcon
-                        },
-                    ).bindTooltip(a[i].location_number,
-                        {
-                            permanent: true,
-                            direction: 'right'
-                        })
-                        .addTo(mymap);
+                    var marker = new google.maps.Marker({
+                        map,
+                        icon: svgMarker,
+                        // icon,
+                        title: pinged_locations[i]['address'],
+                        position: myLatLng,
+                        address: pinged_locations[i]['address'],
+                        // rating: place.rating
+                    });
 
+                    markers.push(
+                        marker
+                    );
                 }
                 // Set colour as blue for remaining markers
                 else {
+                    const svgMarker = {
+                        path: "M10.453 14.016l6.563-6.609-1.406-1.406-5.156 5.203-2.063-2.109-1.406 1.406zM12 2.016q2.906 0 4.945 2.039t2.039 4.945q0 1.453-0.727 3.328t-1.758 3.516-2.039 3.070-1.711 2.273l-0.75 0.797q-0.281-0.328-0.75-0.867t-1.688-2.156-2.133-3.141-1.664-3.445-0.75-3.375q0-2.906 2.039-4.945t4.945-2.039z",
+                        fillColor: "blue",
+                        fillOpacity: 1,
+                        strokeWeight: 0,
+                        rotation: 0,
+                        scale: 2,
+                        anchor: new google.maps.Point(15, 30),
+                    };
                     // Add address as title and bindtooltp for showing location sequentially
-                    var marker = L.marker([a[i].lat, a[i].lng],
-                        {
-                            title: a[i].address,
-                            icon: blueIcon
-                        },
-                    ).bindTooltip(a[i].location_number,
-                        {
-                            permanent: true,
-                            direction: 'right'
-                        })
-                        .addTo(mymap);
+                    var marker = new google.maps.Marker({
+                        map,
+                        icon: svgMarker,
+                        // icon,
+                        title: pinged_locations[i]['address'],
+                        position: myLatLng,
+                        address: pinged_locations[i]['address'],
+                        // rating: place.rating
+                    });
 
+                    markers.push(
+                        marker
+                    );
                 }
             }
 
-            // Function to connect then ping points
-            function connectTheDots(data) {
-                var c = [];
-                for (i = 0; i < a.length; i++) {
-                    var x = a[i].lat;
-                    var y = a[i].lng;
-                    c.push([x, y]);
-                }
-                return c;
-            }
-            // connect location points with polyline
-            pathCoords = connectTheDots(window.geojson);
-            var pathLine = L.polyline(pathCoords).addTo(mymap);
+            // Connecting the dots
+            var flightPath = new google.maps.Polyline({
+                path: flightPlanCoordinates,
+                strokeColor: "#0000FF",
+                strokeOpacity: 1.0,
+                strokeWeight: 2
+            });
 
+            // Adding it to the map
+            flightPath.setMap(map);
         }
     </script>
 </body>
+
+<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAL7VxK8eW8-f2w_bzSeynTSPX941Msx9c&libraries=places&callback=initMap"
+    type="text/javascript">
+    </script>
 
 </html>
