--- a/tracking_list.html
+++ b/tracking_list.html
@@ -116,7 +116,7 @@
                 class="fas fa-plus fa-2x"></i></button>
     </main>
 
-    <nav class="nav">
+    <nav class="nav" hidden>
         <a href="tracking_list.html" class="nav__link nav__link--active">
             <i class="material-icons nav__icon">drive_eta</i>
             <span class="nav__text">Trips</span>
