Changed the URL to fix the tracking issue

--- a/add_driver.html
+++ b/add_driver.html
@@ -167,7 +167,7 @@
                 data: JSON.stringify({
                     "driver_mobile_number": driver_mobile_number,
                     "driver_name": driver_name,
-                    "franchise_id": "FOY0320"
+                    "franchise_id": FRANCHISE_ID
                 }),
                 contentType: 'application/json; charset=utf-8',
                 dataType: 'json',
