--- a/add_tracking.html
+++ b/add_tracking.html
@@ -301,7 +301,7 @@
                 dataType: 'json',
                 contentType: 'application/json; charset=utf-8',
                 data: JSON.stringify({
-                    "franchise_id": "FOY0320"
+                    "franchise_id": FRANCHISE_ID
                 }),
                 beforeSend: function () {
                     showLoader()
@@ -381,7 +381,7 @@
                     "end_longitude": end_longitude,
                     "end_location_name": end_location_name,
                     "modified_by": "LTH4198",
-                    "franchise_id": "FOY0320"
+                    "franchise_id": FRANCHISE_ID
                 }),
                 contentType: 'application/json; charset=utf-8',
                 dataType: 'json',
@@ -519,7 +519,7 @@
                 data: JSON.stringify({
                     "driver_mobile_number": driver_mobile_number,
                     "driver_name": driver_name,
-                    "franchise_id": "FOY0320"
+                    "franchise_id": FRANCHISE_ID
                 }),
                 contentType: 'application/json; charset=utf-8',
                 dataType: 'json',
