--- a/driver_list.html
+++ b/driver_list.html
@@ -82,7 +82,7 @@
                 type: "POST",
                 url: BASE_URL + GET_ALL_DRIVERS,
                 data: JSON.stringify({
-                    "franchise_id": "FOY0320",
+                    "franchise_id": FRANCHISE_ID,
                     "offset": 1,
                     "limit": 15
                 }),
